plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.5'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'pl.upc'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.5.1'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
//    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.31'
    implementation group: 'com.auth0', name: 'java-jwt', version: '4.4.0'
    implementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.paypal.sdk:rest-api-sdk:1.14.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation group: 'com.itextpdf', name: 'kernel', version: '7.0.0'
    implementation group: 'com.itextpdf', name: 'itextpdf', version: '5.5.1'
    implementation group: 'com.lowagie', name: 'itext', version: '2.1.7'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
}


tasks.named('test') {
    useJUnitPlatform()
}
